gitops/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ping-pong
  labels:
    app: ping-pong
    app.kubernetes.io/component: ping-pong
    app.kubernetes.io/instance: ping-pong
    app.kubernetes.io/name: ping-pong
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: ping-pong
